FE: fix tooltip spacing

--- a/frontend/src/Uniform-timeline-chart/Uniform-timeline-chart.css
+++ b/frontend/src/Uniform-timeline-chart/Uniform-timeline-chart.css
@@ -36,13 +36,3 @@
   position: sticky;
   bottom: 10px;
 }
-
-.tooltip {
-  position: absolute;
-  top: 0;
-}
-.tooltip .exit{
-  position: absolute;
-  top: 5px;
-  right: 5px;
-}
